classDiagram
    %% PawPal+ Class Diagram
    %% Updated to reflect design changes including the DailyPlan class

    class Priority {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
    }

    class Owner {
        +str name
        +int available_time_minutes
        +List~Pet~ pets
        +int start_time_hour
        +get_available_time() int
        +add_pet(pet) None
        +__post_init__() None
    }

    class Pet {
        +str name
        +str species
        +str special_needs
        +get_info() str
    }

    class CareTask {
        +str title
        +int duration_minutes
        +Priority priority
        +Optional~Pet~ pet
        +get_priority_score() int
        +__str__() str
        +__post_init__() None
    }

    class Scheduler {
        +create_daily_plan(tasks, owner) DailyPlan
        +sort_tasks_by_priority(tasks) list
    }

    class DailyPlan {
        +list scheduled_tasks
        +int total_time_used
        +str explanation
        +list unscheduled_tasks
        +add_task(task, start_time) None
        +get_summary() str
        +__init__()
    }

    Owner "1" --> "1..*" Pet : owns
    CareTask --> Priority : uses
    CareTask "0..*" --> "0..1" Pet : for
    Scheduler ..> Owner : uses
    Scheduler ..> CareTask : uses
    Scheduler --> DailyPlan : creates
    DailyPlan "1" o-- "*" CareTask : contains
